--- a/resources/assets/sass/modules/_sidebar.scss
+++ b/resources/assets/sass/modules/_sidebar.scss
@@ -10,7 +10,7 @@
     left: 0;
     transition: .2s all;
 
-    @media (max-width: 320px) {
+    @media (max-width: 375px) {
         left: -65px;
 
         &.active {
